--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     // For hilt Implementation
     implementation 'com.google.dagger:hilt-android:2.57.2'
     kapt 'com.google.dagger:hilt-android-compiler:2.57.2'
+
+    //room data base Implementation
+    implementation "androidx.room:room-runtime:2.8.3"
+    kapt "androidx.room:room-compiler:2.8.3"
 }
